# lava

./: .gitignore  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  VERIFICATION.md  example.py  index.html  package-lock.json  package.json  pyproject.toml  setup.py  test-parse-sample2.js  test-parse.js  test-sample-rate.cjs  vite.config.ts
lava/: __init__.py  analysis.py
public/: physics-toolbox-sample-1.csv  physics-toolbox-sample-2.csv  sample-data.csv  test-sample.csv
public/SensorLoggerSamples/2025-11-10_18-08-12/: Accelerometer.csv  AccelerometerUncalibrated.csv  Metadata.csv  TotalAcceleration.csv
public/SensorLoggerSamples/2025-11-14_01-11-59/: Accelerometer.csv  AccelerometerUncalibrated.csv  Metadata.csv  TotalAcceleration.csv
src/: App.test.tsx  App.tsx  index.css
src/parsers/: PhysicsToolboxParser.ts  SensorLoggerParser.ts  index.ts  types.ts
tests/: __init__.py  test_analysis.py
